<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/charactersFragment">

    <fragment
        android:id="@+id/charactersFragment"
        android:name="com.example.rickandmortyapp.ui.characters.CharactersFragment"
        android:label="@string/characters_toolbar_title"
        tools:layout="@layout/fragment_characters">
        <action
            android:id="@+id/action_charactersFragment_to_characterDetailsFragment"
            app:destination="@id/characterDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/characterDetailsFragment"
        android:name="com.example.rickandmortyapp.ui.character_details.CharacterDetailsFragment"
        android:label="@string/character_details_toolbar_title"
        tools:layout="@layout/fragment_character_details">
        <argument
            android:name="id"
            app:argType="integer" />
        <action
            android:id="@+id/action_characterDetailsFragment_to_episodesFragment"
            app:destination="@id/episodesFragment" />
    </fragment>
    <fragment
        android:id="@+id/episodesFragment"
        android:name="com.example.rickandmortyapp.ui.episodes.EpisodesFragment"
        android:label="@string/episodes_title"
        tools:layout="@layout/fragment_episodes">
        <argument
            android:name="episodesArray"
            app:argType="integer[]" />
    </fragment>
</navigation>